# cfig

./: .readthedocs.yml  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
cfig/: __init__.py  config.py  customtyping.py  errors.py  sources.py
cfig/sample/: __init__.py  __main__.py  definition.py  usage.py
cfig/sources/: base.py  env.py  envfile.py
cfig/tests/: test_all.py  test_config.py
docs/: Makefile  advanced.rst  conf.py  glossary.rst  goals.rst  index.rst  installation.rst  quickstart.rst  reference.rst  terminology.rst
